--- a/index.html
+++ b/index.html
@@ -2,12 +2,17 @@
 <html>
   <head>
     <title>Dhack Institute - Web Design Projects</title>
+    <style>
+      img {
+        width: 200px;
+        height: 200px;
+        padding: 5px;
+      }
+    </style>
   </head>
 
   <body>
-    <h1>Year</h1>
-    <ul>
-      <a href="2017.html">2017</a>
-    </ul>
+    <h1>2017</h1>
+    <a href="2017/RISS.html"><img src="images/RISS Summer 2017.jpg" alt="RISS Summer Camp 2017"></a>
   </body>
 </html>
