--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
 
   <body>
     <h1>2017</h1>
-    <a href="2017/RISS.html"><img src="images/RISS Summer 2017.jpg" alt="RISS Summer Camp 2017"></a>
+    <a href="2017/riss-summer/"><img src="images/RISS Summer 2017.jpg" alt="RISS Summer Camp 2017"></a>
   </body>
 </html>
