--- a/index.html
+++ b/index.html
@@ -1,18 +1,101 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Dhack Institute - Web Design Projects</title>
-    <style>
-      img {
-        width: 200px;
-        height: 133px;
-        padding: 5px;
-      }
-    </style>
-  </head>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!--
+Design by TEMPLATED
+http://templated.co
+Released for free under the Creative Commons Attribution License
 
-  <body>
-    <h1>2017</h1>
-    <a href="2017/riss-summer/"><img src="images/RISS Summer 2017.jpg" alt="RISS Summer Camp 2017"></a>
-  </body>
+Name       : Fervency
+Description: A two-column, fixed-width design with dark color scheme.
+Version    : 1.0
+Released   : 20131006
+
+-->
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title></title>
+<meta name="keywords" content="" />
+<meta name="description" content="" />
+<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900" rel="stylesheet" />
+<link href="default.css" rel="stylesheet" type="text/css" media="all" />
+<link href="fonts.css" rel="stylesheet" type="text/css" media="all" />
+
+<!--[if IE 6]><link href="default_ie6.css" rel="stylesheet" type="text/css" /><![endif]-->
+
+</head>
+<body>
+<div id="header-wrapper">
+	<div id="header" class="container">
+		<div id="logo">
+			<img src="images/dhack-logo.png" alt="Dhack Institute - Practical Technology Skills">
+			<br>
+			<span><h2>Intro to Web Design Course</h2></span>
+		</div>
+		<!--
+		<div id="menu">
+			<ul>
+				<li class="current_page_item"><a href="#" accesskey="1" title="">Homepage</a></li>
+				<li><a href="http://dhackinstitute.com/contact/" accesskey="5" title="">Contact Us</a></li>
+			</ul>
+		</div>
+	-->
+	</div>
+</div>
+
+<div id="wrapper3">
+	<div id="portfolio" class="container">
+		<div class="title">
+			<h2>Curations from our past STEM Camps and Tech Clubs</h2>
+		</div>
+		<div>
+			<h2>2017</h2>
+		</div>
+		<div class="column1">
+			<div class="box"> <a href="2017/riss-summer/"><img src="images/riss-summer-2017.png" alt="RISS Summer STEM Camp 2017" class="image image-full" /></a>
+				<h3>RISS Summer STEM Camp 2017</h3>
+				<p>Date: July 17 - 21, 2017</p>
+				<a href="2017/riss-summer/" class="button button-small">View Site</a> </div>
+		</div>
+		<!--
+		<div class="column2">
+			<div class="box"> <a href="#"><img src="images/scr02.jpg" alt="" class="image image-full" /></a>
+				<h3>Praesent scelerisque</h3>
+				<p>Vivamus fermentum nibh in augue praesent urna congue rutrum.</p>
+				<a href="#" class="button button-small">Etiam posuere</a> </div>
+		</div>
+		<div class="column3">
+			<div class="box"> <a href="#"><img src="images/scr03.jpg" alt="" class="image image-full" /></a>
+				<h3>Donec dictum metus</h3>
+				<p>Vivamus fermentum nibh in augue praesent urna congue rutrum.</p>
+				<a href="#" class="button button-small">Etiam posuere</a> </div>
+		</div>
+		<div class="column4">
+			<div class="box"> <a href="#"><img src="images/scr04.jpg" alt="" class="image image-full" /></a>
+				<h3>Mauris vulputate dolor</h3>
+				<p>Rutrum fermentum nibh in augue praesent urna congue rutrum.</p>
+				<a href="#" class="button button-small">Etiam posuere</a> </div>
+		</div>
+	-->
+	</div>
+</div>
+
+<div id="wrapper4">
+	<div id="footer" class="container">
+		<div>
+			<header class="title">
+				<h2>Get in Touch</h2>
+				<span class="byline">Interested in what we do? Visit us through our various channels</span> </header>
+			<ul class="contact">
+				<li><a href="https://twitter.com/DhackInstitute" class="icon icon-twitter"><span>Twitter</span></a></li>
+				<li><a href="https://www.facebook.com/dhackinstitute/" class="icon icon-facebook"><span>Facebook</span></a></li>
+				<li><a href="https://www.instagram.com/dhackinstitute/" class="icon icon-instagram"><span>Instagram</span></a></li>
+				<li><a href="http://www.dhackinstitute.com/" class="icon icon-dribbble"><span>Website</span></a></li>
+			</ul>
+		</div>
+	</div>
+</div>
+<div id="copyright">
+	<p>2017 <a href="http://www.dhackinstitute.com">Dhack Institute</a>. All rights reserved.</p>
+</div>
+</body>
 </html>
