--- a/index.html
+++ b/index.html
@@ -56,13 +56,14 @@ Released   : 20131006
 				<p>Date: July 17 - 21, 2017</p>
 				<a href="2017/riss-summer/" class="button button-small">View Site</a> </div>
 		</div>
-		<!--
+		
 		<div class="column2">
-			<div class="box"> <a href="#"><img src="images/scr02.jpg" alt="" class="image image-full" /></a>
-				<h3>Praesent scelerisque</h3>
-				<p>Vivamus fermentum nibh in augue praesent urna congue rutrum.</p>
-				<a href="#" class="button button-small">Etiam posuere</a> </div>
+			<div class="box"> <a href="2017/dhack-summer"><img src="images/scr02.jpg" alt="Dhack Institute Summer STEM Camp 2017" class="image image-full" /></a>
+				<h3>Dhack Institute Summer STEM Camp 2017</h3>
+				<p>Date: July 31 - August 25, 2017</p>
+				<a href="2017/dhack-summer" class="button button-small">View Site</a> </div>
 		</div>
+		<!--
 		<div class="column3">
 			<div class="box"> <a href="#"><img src="images/scr03.jpg" alt="" class="image image-full" /></a>
 				<h3>Donec dictum metus</h3>
