--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ Released   : 20131006
 		</div>
 		
 		<div class="column2">
-			<div class="box"> <a href="2017/dhack-summer"><img src="images/scr02.jpg" alt="Dhack Institute Summer STEM Camp 2017" class="image image-full" /></a>
+			<div class="box"> <a href="2017/dhack-summer"><img src="images/dhack-logo.png" alt="Dhack Institute Summer STEM Camp 2017" class="image image-full" /></a>
 				<h3>Dhack Institute Summer STEM Camp 2017</h3>
 				<p>Date: July 31 - August 25, 2017</p>
 				<a href="2017/dhack-summer" class="button button-small">View Site</a> </div>
